# RayTracing

./: CMakeLists.txt  main.cc
include/: aabb.h  aarect.h  box.h  bvh.h  camera.h  constant_medium.h  hittable.h  material.h  myutils.h  perlin.h  ray.h  scene.h  sphere.h  texture.h  vec3.h
src/: aabb.cpp  aarect.cpp  box.cpp  bvh.cpp  camera.cpp  constant_medium.cpp  hittable.cpp  material.cpp  perlin.cpp  scene.cpp  sphere.cpp  texture.cpp
